--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-        content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
     <title>SWARVOSKI</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <p class="sikpNavi blind"><a href="#container">본문내용으로 가기</a></p>
+    <div id="wrap">
         <header id="header">
             <div class="gnb_area">
                 <h1 class="logo"><a href="index.html"><img src="image/logo_b.png" alt="SWAROVSKI"></a></h1>
                 <nav class="gnb">
                     <h2 class="blind">메뉴</h2>
-                    <ul class="depth1 clearfix">
+                    <ul class="depth1">
                         <li><a href="sub_1.html">주얼리</a>
                             <ul class="depth2">
                                 <li><a href="#">네크리스 & 펜던트</a></li>
@@ -78,19 +78,18 @@
                         <li><a href="#">MYPAGE</a></li>
                     </ul>
                 </nav>
-                <button type="submit"><img src="image/search.png" title="검색버튼" alt="검색"></button>
                 <div id="search">
-                    <div class="search_wrap">
-                        <span class="search_close">X</span>
-                    <form>
-                        <fieldset>
-                            <legend class="blind">메인 화면 검색</legend>
-                            <label for="searchbox" class="blind">검색 입력란</label>
-                            <input type="search" id="searchbox" placeholder="검색">
-                        </fieldset>
-                    </form>
+                    <div class="main_search">
+                        <form>
+                            <fieldset>
+                                <legend class="blind">메인 화면 검색</legend>
+                                <label for="searchbox" class="blind">메인 검색 입력란</label>
+                                <input type="search" id="searchbox" placeholder="검색">
+                            </fieldset>
+                        </form>
                     </div>
                 </div>
+                <button type="submit" class="mainsearch_icon"><img src="image/search.png" title="검색버튼" alt="검색"></button>
                 <div class="open"></div>
                 <nav class="mo_gnb">
                     <div class="close"></div>
@@ -144,23 +143,25 @@
                 </nav>
             </div>
         </header>
-        <div class="mo_bg">
-            <div></div>
-        </div>
         <div class="visual">
             <div class="brandVisual">
                 <ul>
-                    <li class="visual_0"><a href="#">Valentine Day
-                            30% SALE for you
+                    <li class="visual_0">
+                        <a href="#">
+                        멜라니아 목걸이
                         </a></li>
-                    <li class="visual_1"><a href="#">Glamorous
-                            스카라베, 나비, 거미 모티브로 의미있고
-                            고급스러운 골드 플래팅으로 유니크한 당신을 만들어줍니다.
+                    <li class="visual_1">
+                        <a href="#">
+                            Dulcis
+                            화려하고 아름답게 꾸며진 새로운 스와로브스키의 Dulcis을 만나보세요.
+                            캔디처럼 군침 도는 디자인으로 어떠한 각도에서도 반짝이는 달콤한 느껴보세요.
                         </a></li>
-                    <li class="visual_2"><a href="#">Fashionable
-                            프리미엄 레더 소재에 3D 플라워와
-                            정교한 크리스털이 더해져 눈부신 디자인과
-                            범퍼가 통합되어 아름다움을 유지할 수 있습니다.</a></li>
+                    <li class="visual_2">
+                        <a href="#">
+                            HARMONIA 목걸이와 반지
+                            화이트 크리스탈과 블랙 라인의 모노톤 디자인
+                        </a>
+                    </li>
                 </ul>
             </div>
             <ul class="button_list">
@@ -170,6 +171,7 @@
             </ul>
         </div>
         <div id="container">
+            <div class="contents">
             <div class="newproduct">
                 <div class="newproduct_wrap">
                     <h2 class="newproduct_title">NEW ITEM</h2>
@@ -191,12 +193,9 @@
                 </div>
             </div>
             <div class="c_p">
-                <p class="cons"><a href="#"><img src="image/constellation.jpg"
-                            alt="별자리 기호와 페어컷 탄생석
-                            그리고 조디악 펜던트와 함께 항상
-                            당신의 반짝이는 매력을 표현해보세요."></a></p>
-                <p class="cup"><a href="#"><span class="blind">반짝이는 당신의 식탁</span></a></p>
-                <p class="pen"><a href="#"><span class="blind">ECLIPSE BALL PEN</span></a></p>
+                <p class="cons"><a href="#"><img src="image/constellation.jpg" alt="별자리 기호와 페어컷 탄생석 그리고 조디악 펜던트와 함께 항상 당신의 반짝이는 매력을 표현해보세요."></a></p>
+                <p class="cup"><a href="#" alt="반짝이는 당신의 식탁"><span class="blind"></span></a></p>
+                <p class="pen"><a href="#" alt="ECLIPSE BALL PEN"><span class="blind"></span></a></p>
             </div>
             <div class="peter">
                 <a href="#">
@@ -231,74 +230,81 @@
                 <p class="itf"><a href="#"><img src="image/gift.jpg" alt="Gift 기프트 전용상품으로 준비되어 있어 고민하지 않아도 감동적인 선물을 보낼 수 있습니다."></a></p>
             </div>
         </div>
-    <footer>
-        <div class="footmenu">
-            <ul class="footmenu_wrap">
-                <li><span class="menu_name">브랜드</span>
-                    <ul class="sub_menu">
-                        <li><a href="#">회사소개</a></li>
-                        <li><a href="#">채용정보</a></li>
-                        <li><a href="#">법인구매</a></li>
-                        <li><a href="#">사이트맵</a></li>
-                    </ul>
-                </li>
-                <li><span class="menu_name">법적고지</span>
-                    <ul class="sub_menu">
-                        <li><a href="#">저작권</a></li>
-                        <li><a href="#">이용약관</a></li>
-                        <li><a href="#">개인정보 보호</a></li>
-                        <li><a href="#">회사정보</a></li>
-                    </ul>
-                </li>
-                <li><span class="menu_name">고객센터</span>
-                    <ul class="sub_menu">
-                        <li><a href="#">문의</a></li>
-                        <li><a href="#">온라인 스토어FAQ</a></li>
-                        <li><a href="#">배송 및 반품</a></li>
-                        <li><a href="#">제품관리 및 수선</a></li>
-                        <li><a href="#">온라인 수선</a></li>
-                    </ul>
-                </li>
-                <li><span class="menu_name">멤버십</span>
-                    <ul class="sub_menu">
-                        <li><a href="#">Swarovski Club</a></li>
-                        <li><a href="#">Swarovski Crystal Society</a></li>
-                    </ul>
-                </li>
-            </ul>
         </div>
-        <div class="footarea_wrap">
-            <p class="foot_logo"><img src="image/logo_w.png" alt=""><span class="blind">swarovski</span></p>
-            <p class="foot_info">스와로브스키 코리아<br>
-                                서울특별시 강남구 도산대로 000 &nbsp; CEO: 홍길동<br>
-                                사업자등록번호 000-00-00000 &nbsp; 통신판매업신고번호 0000-서울강남-00000<br>
-                                고객센터 1000-0000 대표번호 1234-5678 &nbsp; 팩스: 00-123-4567 &nbsp; E-mail: help@samin.com<br>
-            </p>
-                <address>이 사이트는 포트폴리오 용으로 만들어진 가상 사이트입니다. 사이트에 사용된 사진과 내용의 저작권은 스와로브스키에 있습니다.<br>
-                        Copyrightc&copy; 2021 강다혜, All Rights Reserved.
-                </address>
-            <div class="sns_icon">
-                <h2 class="sns_icon_title">Follow Us</h2>
-                <a href="https://www.facebook.com/swarovski.korea" class="sns_fb" title="공식 페이스북 계정으로 가기">페이스북</a>
-                <a href="https://twitter.com/swarovski" class="sns_tw" title="공식 트위터 계정으로 가기">트위터</a>
-                <a href="https://www.youtube.com/user/swarovski" class="sns_yt" title="공식 유튜브 채널로 가기">유튜브</a>
-                <a href="https://www.instagram.com/swarovski/" class="sns_ig" title="공식 인스타그램 계정으로 가기">인스타그램</a>
-            </div>
-            <div id="newsletter">
-                <div class="newsletter_wrap">
-                    <h2 class="newletter_title">NEWS LETTER</h2>
-                    <form>
-                        <fieldset>
-                            <legend>구독 이메일 입력</legend>
-                            <label for="newletter">NEWS LETTER</label>
-                            <input type="email" id="newletter" placeholder="이메일 입력">
-                            <button type="submit">구독</button>
-                        </fieldset>
-                    </form>
+        <footer id="footer">
+            <div class="footer_wrap">
+                <div class="footmenu">
+                    <ul class="footmenu_wrap">
+                        <li><span class="menu_name">브랜드</span>
+                            <ul class="sub_menu">
+                                <li><a href="#">회사소개</a></li>
+                                <li><a href="#">채용정보</a></li>
+                                <li><a href="#">법인구매</a></li>
+                                <li><a href="#">사이트맵</a></li>
+                            </ul>
+                        </li>
+                        <li><span class="menu_name">법적고지</span>
+                            <ul class="sub_menu">
+                                <li><a href="#">저작권</a></li>
+                                <li><a href="#">이용약관</a></li>
+                                <li><a href="#">개인정보 보호</a></li>
+                                <li><a href="#">회사정보</a></li>
+                            </ul>
+                        </li>
+                        <li><span class="menu_name">고객센터</span>
+                            <ul class="sub_menu">
+                                <li><a href="#">문의</a></li>
+                                <li><a href="#">온라인 스토어FAQ</a></li>
+                                <li><a href="#">배송 및 반품</a></li>
+                                <li><a href="#">제품관리 및 수선</a></li>
+                                <li><a href="#">온라인 수선</a></li>
+                            </ul>
+                        </li>
+                        <li><span class="menu_name">멤버십</span>
+                            <ul class="sub_menu">
+                                <li><a href="#">Swarovski Club</a></li>
+                                <li><a href="#">Swarovski Crystal Society</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <div class="right">
+                        <div class="sns_icon">
+                            <h2 class="sns_icon_title">Follow Us</h2>
+                            <a href="https://www.facebook.com/swarovski.korea" class="sns_fb" title="공식 페이스북 계정 새창으로 보기">페이스북</a>
+                            <a href="https://twitter.com/swarovski" class="sns_tw" title="공식 트위터 계정 새창으로 보기">트위터</a>
+                            <a href="https://www.youtube.com/user/swarovski" class="sns_yt" title="공식 유튜브 채널 새창으로 보기">유튜브</a>
+                            <a href="https://www.instagram.com/swarovski/" class="sns_ig" title="공식 인스타그램 계정 새창으로 보기">인스타그램</a>
+                        </div>
+                        <div class="newsletter">
+                            <div class="newsletter_wrap">
+                                <h2 class="newletter_title">NEWS LETTER</h2>
+                                <form>
+                                    <fieldset>
+                                        <legend>구독 이메일 입력</legend>
+                                        <label for="newletter">NEWS LETTER</label>
+                                        <input type="email" id="newletter" placeholder="이메일 입력">
+                                        <button type="submit">구독</button>
+                                    </fieldset>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="footarticle">
+                    <div class="footarticle_wrap">
+                        <a href="#" class="foot_logo"><img src="image/logo_w.png" alt=""><span class="blind">swarovski</span></a>
+                        <p class="foot_info">Swarovski korea | 서울특별시 강남구 도산대로 000 | CEO: 홍길동<br>
+                                            사업자등록번호 000-00-00000 <a href="https://www.ftc.go.kr/www/bizCommList.do?key=232" title="사업자 정보 확인 새창으로 보기">사업자 정보 확인</a> | 통신판매업신고번호 0000-서울강남-00000<br>
+                                            고객센터 1000-0000 대표번호 1234-5678 | 팩스: 00-123-4567 | E-mail: help@samin.com
+                        </p>
+                            <address>이 사이트는 포트폴리오 용으로 만들어진 가상 사이트입니다. 사이트에 사용된 사진과 내용의 저작권은 스와로브스키에 있습니다.<br>
+                                    Copyrightc&copy; 2021 강다혜, All Rights Reserved.
+                            </address>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </div>  
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/slidebanner.js" type="text/javascript"></script>
