--- a/sub_1.html
+++ b/sub_1.html
@@ -7,10 +7,11 @@
     <title>SWARVOSKI</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-    <body>
-        <p class="sikpNavi blind"><a href="#container">본문내용으로 가기</a></p>
+<body>
+    <p class="sikpNavi blind"><a href="#container">본문내용으로 가기</a></p>
+    <div id="wrap">
         <header id="header">
-            <div class="gnb_area">
+        <div class="gnb_area">
                 <h1 class="logo"><a href="index.html"><img src="image/logo_b.png" alt="SWAROVSKI"></a></h1>
                 <nav class="gnb">
                     <h2 class="blind">메뉴</h2>
@@ -76,19 +77,18 @@
                         <li><a href="#">MYPAGE</a></li>
                     </ul>
                 </nav>
-                <button type="submit"><img src="image/search.png" title="검색버튼" alt="검색"></button>
                 <div id="search">
-                    <div class="search_wrap">
-                        <span class="search_close">X</span>
-                    <form>
-                        <fieldset>
-                            <legend class="blind">메인 화면 검색</legend>
-                            <label for="searchbox" class="blind">검색 입력란</label>
-                            <input type="search" id="searchbox" placeholder="검색">
-                        </fieldset>
-                    </form>
+                    <div class="main_search">
+                        <form>
+                            <fieldset>
+                                <legend class="blind">메인 화면 검색</legend>
+                                <label for="searchbox" class="blind">메인 검색 입력란</label>
+                                <input type="search" id="searchbox" placeholder="검색">
+                            </fieldset>
+                        </form>
                     </div>
                 </div>
+                <button type="submit" class="mainsearch_icon"><img src="image/search.png" title="검색버튼" alt="검색"></button>
                 <div class="open"></div>
                 <nav class="mo_gnb">
                     <div class="close"></div>
@@ -140,96 +140,181 @@
                         <p class="app_2"><a href="#"></a></p>
                     </div>
                 </nav>
-            </div>
+        </div>
         </header>
-            <div class="j_main">
-                <p><a href="#"><img src="image/sub_image/j_mbg.jpg" alt="jewelry"></a></p>
-                <ul>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                </ul>
-            </div>
-            <div class="j_coll">
-                <p><img src="image/sub_image/j_coll_text.png" alt="coll"></p>
-                <div class=" j_pro">
-                    <p><a href="#"><span class="blind">Tabitha Simmons<br> 쿠튀르 스타일에서 영감을 얻어 리치한 아메시스트, 에메랄드, 몬타나 블루, 골든 섀도우 크리스털을 세팅해 풍성한 분위기의 주얼리</span></a></p>
-                    <p><a href="#"><span class="blind">Graceful Bloom<br> 활짝 핀 카멜리아 꽃잎을 더해 행운과 지혜, 부를 상징하는 주얼리</span></a></p>
-                    <p><a href="#"><span class="blind">Calypso<br> 태양이 빛나는 환한 낮과 매력적인 반짝임이 있는 밤의 아름다움을 표현할 수 있는 주얼리</span></a> </p>
-                    <p><a href="#"><span class="blind">Mayfly<br> 다양한 테크닉과 소재로 매력적인 분위기를 연출하여 우아하고 여성스러운 주얼리</span></a></p>
-                    <p><a href="#"><span class="blind">Gaia<br> 그린에서 블루까지 미묘하게 변화하는 스와로브스키의 포인티아지 기술이 고스란히 담긴 주얼리</span></a></p>
+        <div id="container">
+            <div class="jewelry">
+                <div class="jewelry_menu">
+                    <p><span class="blind">주얼리 메인정보 이미지</span></p>
                 </div>
-            </div>
-            <footer>
-                <div class="footmenu">
-                    <ul class="footmenu_wrap">
-                        <li><span class="menu_name">브랜드</span>
-                            <ul class="sub_menu">
-                                <li><a href="#">회사소개</a></li>
-                                <li><a href="#">채용정보</a></li>
-                                <li><a href="#">법인구매</a></li>
-                                <li><a href="#">사이트맵</a></li>
+                <div class="jewelry_coll">
+                <h2><img src="image/sub_image/j_coll_text.png" alt="주얼리 컬렉션"></h2>
+                <div class="jewelry_info">
+                    <ul class="list_5">
+                        <li>
+                            <div class="bg">
+                                <p class="coll_info">Tabitha Simmons</p>
+                                <span class="info_txt"> 쿠튀르 스타일에서 영감을 얻어 리치한 아메시스트, 에메랄드, 몬타나 블루, 골든 섀도우 크리스털을 세팅해 풍성한 분위기의 주얼리</span>
+                            </div>
+                            <ul class="jewelry_pro">
+                                <li><a href="#"><img src="/image/sub_image/pro_img01.jpg" alt="상품1 상세페이지"></a>
+                                    <a href="#"><span class="detail_page">구매하기</span></a>
+                                </li>
+                                <li><a href="#"><img src="/image/sub_image/pro_img02.jpg" alt="상품2 상세페이지"></a>
+                                    <a href="#"><span class="detail_page">구매하기</span></a>
+                                </li>
+                                <li><a href="#"><img src="/image/sub_image/pro_img03.jpg" alt="상품3 상세페이지"></a>
+                                    <a href="#"><span class="detail_page">구매하기</span></a>
+                                </li>
                             </ul>
                         </li>
-                        <li><span class="menu_name">법적고지</span>
-                            <ul class="sub_menu">
-                                <li><a href="#">저작권</a></li>
-                                <li><a href="#">이용약관</a></li>
-                                <li><a href="#">개인정보 보호</a></li>
-                                <li><a href="#">회사정보</a></li>
+                        <li>
+                            <div class="bg">
+                                <p class="coll_info">Graceful Bloom</p>
+                                <p class="info_txt"> 활짝 핀 카멜리아 꽃잎을 더해 행운과 지혜, 부를 상징하는 주얼리</p>
+                            </div>
+                            <ul class="jewelry_pro">
+                                <li><a href="#"><img src="/image/sub_image/pro_img04.jpg" alt="상품1 상세페이지"></a>
+                                <a href="#"><span class="detail_page">구매하기</span></a>
+                            </li>
+                                <li><a href="#"><img src="/image/sub_image/pro_img05.jpg" alt="상품2 상세페이지"></a>
+                                <a href="#"><span class="detail_page">구매하기</span></a>
+                            </li>
+                                <li><a href="#"><img src="/image/sub_image/pro_img06.jpg" alt="상품3 상세페이지"></a>
+                                <a href="#"><span class="detail_page">구매하기</span></a>
+                            </li>
                             </ul>
                         </li>
-                        <li><span class="menu_name">고객센터</span>
-                            <ul class="sub_menu">
-                                <li><a href="#">문의</a></li>
-                                <li><a href="#">온라인 스토어FAQ</a></li>
-                                <li><a href="#">배송 및 반품</a></li>
-                                <li><a href="#">제품관리 및 수선</a></li>
-                                <li><a href="#">온라인 수선</a></li>
+                        <li>
+                            <div class="bg">
+                                <p class="coll_info">Calypso</p>
+                                <p class="info_txt"> 태양이 빛나는 환한 낮과 매력적인 반짝임이 있는 밤의 아름다움을 표현할 수 있는 주얼리</p>
+                            </div>
+                            <ul class="jewelry_pro">
+                                <li><a href="#"><img src="/image/sub_image/pro_img07.jpg" alt="상품1 상세페이지"></a>
+                                <a href="#"><span class="detail_page">구매하기</span></a>
+                                </li>
+                                <li><a href="#"><img src="/image/sub_image/pro_img08.jpg" alt="상품2 상세페이지"></a>
+                                <a href="#"><span class="detail_page">구매하기</span></a>
+                                </li>
+                                <li><a href="#"><img src="/image/sub_image/pro_img09.jpg" alt="상품3 상세페이지"></a>
+                                <a href="#"><span class="detail_page">구매하기</span></a>
+                                </li>
                             </ul>
                         </li>
-                        <li><span class="menu_name">멤버십</span>
-                            <ul class="sub_menu">
-                                <li><a href="#">Swarovski Club</a></li>
-                                <li><a href="#">Swarovski Crystal Society</a></li>
+                        <li>
+                            <div class="bg">
+                                <p class="coll_info">Mayfly</p>
+                                <p class="info_txt"> 다양한 테크닉과 소재로 매력적인 분위기를 연출하여 우아하고 여성스러운 주얼리</p>
+                            </div>
+                            <ul class="jewelry_pro">
+                                <li><a href="#"><img src="/image/sub_image/pro_img10.jpg" alt="상품1 상세페이지"></a>
+                                <a href="#"><span class="detail_page">구매하기</span></a>
+                                </li>
+                                <li><a href="#"><img src="/image/sub_image/pro_img11.jpg" alt="상품2 상세페이지"></a>
+                                <a href="#"><span class="detail_page">구매하기</span></a>
+                                </li>
+                                <li><a href="#"><img src="/image/sub_image/pro_img12.jpg" alt="상품3 상세페이지"></a>
+                                <a href="#"><span class="detail_page">구매하기</span></a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <div class="bg">
+                                <p class="coll_info">Gaia</p>
+                                <p class="info_txt"> 그린에서 블루까지 미묘하게 변화하는 스와로브스키의 포인티아지 기술이 고스란히 담긴 주얼리</p>
+                            </div>
+                            <ul class="jewelry_pro">
+                                <li><a href="#"><img src="/image/sub_image/pro_img13.jpg" alt="상품1 상세페이지"></a>
+                                <a href="#"><span class="detail_page">구매하기</span></a>
+                                </li>
+                                <li><a href="#"><img src="/image/sub_image/pro_img14.jpg" alt="상품2 상세페이지"></a>
+                                <a href="#"><span class="detail_page">구매하기</span></a>
+                                </li>
+                                <li><a href="#"><img src="/image/sub_image/pro_img15.jpg" alt="상품3 상세페이지"></a>
+                                <a href="#"><span class="detail_page">구매하기</span></a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
                 </div>
-                <div class="footarea_wrap">
-                    <p class="foot_logo"><img src="image/logo_w.png" alt=""><span class="blind">swarovski</span></p>
-                    <p class="foot_info">스와로브스키 코리아<br>
-                                        서울특별시 강남구 도산대로 000 &nbsp; CEO: 홍길동<br>
-                                        사업자등록번호 000-00-00000 &nbsp; 통신판매업신고번호 0000-서울강남-00000<br>
-                                        고객센터 1000-0000 대표번호 1234-5678 &nbsp; 팩스: 00-123-4567 &nbsp; E-mail: help@samin.com<br>
-                    </p>
-                        <address>이 사이트는 포트폴리오 용으로 만들어진 가상 사이트입니다. 사이트에 사용된 사진과 내용의 저작권은 스와로브스키에 있습니다.<br>
-                                Copyrightc&copy; 2021 강다혜, All Rights Reserved.
-                        </address>
-                    <div class="sns_icon">
-                        <h2 class="sns_icon_title">Follow Us</h2>
-                        <a href="https://www.facebook.com/swarovski.korea" class="sns_fb" title="공식 페이스북 계정으로 가기">페이스북</a>
-                        <a href="https://twitter.com/swarovski" class="sns_tw" title="공식 트위터 계정으로 가기">트위터</a>
-                        <a href="https://www.youtube.com/user/swarovski" class="sns_yt" title="공식 유튜브 채널로 가기">유튜브</a>
-                        <a href="https://www.instagram.com/swarovski/" class="sns_ig" title="공식 인스타그램 계정으로 가기">인스타그램</a>
+            </div>
+        </div>
+        </div>
+    </div>
+    <footer id="footer">
+                <div class="footer_wrap">
+                    <div class="footmenu">
+                        <ul class="footmenu_wrap">
+                            <li><span class="menu_name">브랜드</span>
+                                <ul class="sub_menu">
+                                    <li><a href="#">회사소개</a></li>
+                                    <li><a href="#">채용정보</a></li>
+                                    <li><a href="#">법인구매</a></li>
+                                    <li><a href="#">사이트맵</a></li>
+                                </ul>
+                            </li>
+                            <li><span class="menu_name">법적고지</span>
+                                <ul class="sub_menu">
+                                    <li><a href="#">저작권</a></li>
+                                    <li><a href="#">이용약관</a></li>
+                                    <li><a href="#">개인정보 보호</a></li>
+                                    <li><a href="#">회사정보</a></li>
+                                </ul>
+                            </li>
+                            <li><span class="menu_name">고객센터</span>
+                                <ul class="sub_menu">
+                                    <li><a href="#">문의</a></li>
+                                    <li><a href="#">온라인 스토어FAQ</a></li>
+                                    <li><a href="#">배송 및 반품</a></li>
+                                    <li><a href="#">제품관리 및 수선</a></li>
+                                    <li><a href="#">온라인 수선</a></li>
+                                </ul>
+                            </li>
+                            <li><span class="menu_name">멤버십</span>
+                                <ul class="sub_menu">
+                                    <li><a href="#">Swarovski Club</a></li>
+                                    <li><a href="#">Swarovski Crystal Society</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <div class="right">
+                            <div class="sns_icon">
+                                <h2 class="sns_icon_title">Follow Us</h2>
+                                <a href="https://www.facebook.com/swarovski.korea" class="sns_fb" title="공식 페이스북 계정 새창으로 보기">페이스북</a>
+                                <a href="https://twitter.com/swarovski" class="sns_tw" title="공식 트위터 계정 새창으로 보기">트위터</a>
+                                <a href="https://www.youtube.com/user/swarovski" class="sns_yt" title="공식 유튜브 채널 새창으로 보기">유튜브</a>
+                                <a href="https://www.instagram.com/swarovski/" class="sns_ig" title="공식 인스타그램 계정 새창으로 보기">인스타그램</a>
+                            </div>
+                            <div class="newsletter">
+                                <div class="newsletter_wrap">
+                                    <h2 class="newletter_title">NEWS LETTER</h2>
+                                    <form>
+                                        <fieldset>
+                                            <legend>구독 이메일 입력</legend>
+                                            <label for="newletter">NEWS LETTER</label>
+                                            <input type="email" id="newletter" placeholder="이메일 입력">
+                                            <button type="submit">구독</button>
+                                        </fieldset>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div id="newsletter">
-                        <div class="newsletter_wrap">
-                            <h2 class="newletter_title">NEWS LETTER</h2>
-                            <form>
-                                <fieldset>
-                                    <legend>구독 이메일 입력</legend>
-                                    <label for="newletter">NEWS LETTER</label>
-                                    <input type="email" id="newletter" placeholder="이메일 입력">
-                                    <button type="submit">구독</button>
-                                </fieldset>
-                            </form>
+                    <div class="footarticle">
+                        <div class="footarticle_wrap">
+                            <a href="#" class="foot_logo"><img src="image/logo_w.png" alt=""><span class="blind">swarovski</span></a>
+                            <p class="foot_info">Swarovski korea | 서울특별시 강남구 도산대로 000 | CEO: 홍길동<br>
+                                                사업자등록번호 000-00-00000 <a href="https://www.ftc.go.kr/www/bizCommList.do?key=232" title="사업자 정보 확인 새창으로 보기">사업자 정보 확인</a> | 통신판매업신고번호 0000-서울강남-00000<br>
+                                                고객센터 1000-0000 대표번호 1234-5678 | 팩스: 00-123-4567 | E-mail: help@samin.com
+                            </p>
+                                <address>이 사이트는 포트폴리오 용으로 만들어진 가상 사이트입니다. 사이트에 사용된 사진과 내용의 저작권은 스와로브스키에 있습니다.<br>
+                                        Copyrightc&copy; 2021 강다혜, All Rights Reserved.
+                                </address>
                         </div>
                     </div>
                 </div>
-            </footer>
+    </footer>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/slidebanner.js" type="text/javascript"></script>
